src/objects/Organization_Type__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cohort__c</fullName>
        <label>Cohort</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Type_Name__c</fullName>
        <label>Org Type Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Organization Type</label>
</CustomObject>